--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Lucas Cobb</title>
+  <meta name="description" content="I build websites.">
+  <meta name="author" content="Lucas Cobb">
+
+  <link rel="stylesheet" href="css/styles.css">
+
+  <!--[if lt IE 9]>
+  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+
+<body>
 hello world
+</body>
+</html>
