adding styles for body / canvas via css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 
 <body>
-hello world
+<div class="canvas">
+    
+    <header class="header">
+        <h1>Lucas Cobb Design</h1>
+    </header>
+    
+</div>
 </body>
 </html>
