adjust dribbble link in footer

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     <footer class="footer">
         <div class="divider"></div>
-        <p>Check me out on <a href="https://dribbble.com/">Dribbble</a> to get in touch.</p>
+        <p>Check me out on <a href="//dribbble.com/lucasdavidcobb">Dribbble</a> to get in touch.</p>
     </footer>
     
 </div>
